--- a/movie-list/package.json
+++ b/movie-list/package.json
@@ -4,6 +4,8 @@
   "description": "Primeiro projeto do livro React de Roy Dercks",
   "main": "index.js",
   "scripts": {
+    "start": "webpack --mode development",
+    "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
