--- a/movie-list/package.json
+++ b/movie-list/package.json
@@ -18,7 +18,8 @@
     "babel-loader": "^8.2.5",
     "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
     "react": "^18.2.0",
