--- a/movie-list/package.json
+++ b/movie-list/package.json
@@ -4,7 +4,7 @@
   "description": "Primeiro projeto do livro React de Roy Dercks",
   "main": "index.js",
   "scripts": {
-    "start": "webpack --mode development",
+    "start": "webpack-dev-server --mode development --hot",
     "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
