--- a/movie-list/package.json
+++ b/movie-list/package.json
@@ -9,7 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "SAMUEL SOUZA",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.19.3",
